Refs #11300: try blackbox test
Signed-off-by: jparisu <javierparis@eprosima.com>

--- a/.github/actions/install-apt-packages/action.yml
+++ b/.github/actions/install-apt-packages/action.yml
@@ -19,6 +19,5 @@ runs:
           libtinyxml2-dev \
           clang-tidy \
           curl \
-          grep \
-          libxcb-*
+          grep
       shell: bash
