Refs #11300: try use arg in clang-tidy
Signed-off-by: jparisu <javierparis@eprosima.com>

--- a/.github/actions/install-apt-packages/action.yml
+++ b/.github/actions/install-apt-packages/action.yml
@@ -17,7 +17,7 @@ runs:
           wget \
           libasio-dev \
           libtinyxml2-dev \
-          clang-tidy \
+          clang-tidy-10 \
           curl \
           grep
       shell: bash
