--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -84,14 +84,13 @@ jobs:
           name: Documentation HTML
           path: install/fastdds-monitor/docs/fastdds-monitor-docs/sphinx/html/
 
-      # Not allowed for private repositories without token
-      # - name: Upload coverage to Codecov
-      #   uses: codecov/codecov-action@v1
-      #   with:
-      #     token: ${{ secrets.CODECOV_TOKEN }}
-      #     file: coverage-report/coverage.xml
-      #     root_dir: src/Fast-DDS-monitor
-      #     fail_ci_if_error: true
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v1
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          file: coverage-report/coverage.xml
+          root_dir: src/Fast-DDS-monitor
+          fail_ci_if_error: true
 
       - name: Upload Logs
         uses: actions/upload-artifact@v1
