Refs #11408: fixing errors and add github artifact for spelling errors
Signed-off-by: jparisu <javierparis@eprosima.com>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -99,6 +99,13 @@ jobs:
           path: log/
         if: always()
 
+      - name: Upload spelling errors
+        uses: actions/upload-artifact@v1
+        with:
+          name: spelling_errors.txt
+          path: build/fastdds-monitor/docs/test/spelling/output.txt
+        continue-on-error: true
+
   clang-tidy:
     runs-on: ubuntu-latest
     steps:
