Update apt in actions
Signed-off-by: RaulSanchez <raul@eprosima.com>

--- a/.github/actions/install-apt-packages/action.yml
+++ b/.github/actions/install-apt-packages/action.yml
@@ -5,7 +5,7 @@ runs:
   steps:
     - id: install-apt-packages
       run: |
-        sudo apt -y install \
+        sudo apt update && sudo apt -y install \
           doxygen \
           graphviz \
           imagemagick \
