Uncrustify (second try)
Signed-off-by: RaulSanchez <raul@eprosima.com>

--- a/include/fastdds-monitor/config.h.in
+++ b/include/fastdds-monitor/config.h.in
@@ -17,33 +17,33 @@
 
 #ifndef FASTDDS_MONITOR_VERSION_MAJOR
 #define FASTDDS_MONITOR_VERSION_MAJOR @PROJECT_VERSION_MAJOR@
-#endif
+#endif /* ifndef FASTDDS_MONITOR_VERSION_MAJOR */
 #ifndef FASTDDS_MONITOR_VERSION_MINOR
 #define FASTDDS_MONITOR_VERSION_MINOR @PROJECT_VERSION_MINOR@
-#endif
+#endif /* ifndef FASTDDS_MONITOR_VERSION_MINOR */
 #ifndef FASTDDS_MONITOR_VERSION_MICRO
 #define FASTDDS_MONITOR_VERSION_MICRO @PROJECT_VERSION_PATCH@
-#endif
+#endif /* ifndef FASTDDS_MONITOR_VERSION_MICRO */
 #ifndef FASTDDS_MONITOR_VERSION_STR
 #define FASTDDS_MONITOR_VERSION_STR "@PROJECT_VERSION@"
-#endif
+#endif /* ifndef FASTDDS_MONITOR_VERSION_STR */
 
 #ifndef SYSTEM_NAME
 #define SYSTEM_NAME "@SYSTEM_NAME@"
-#endif
+#endif /* ifndef SYSTEM_NAME */
 #ifndef SYSTEM_PROCESSOR
 #define SYSTEM_PROCESSOR "@SYSTEM_PROCESSOR@"
-#endif
+#endif /* ifndef SYSTEM_PROCESSOR */
 #ifndef SYSTEM_VERSION
 #define SYSTEM_VERSION "@SYSTEM_VERSION@"
-#endif
+#endif /* ifndef SYSTEM_VERSION */
 
 #ifndef BUILD_DATE
 #define BUILD_DATE "@BUILD_DATE@"
-#endif
+#endif /* ifndef BUILD_DATE */
 
 #ifndef GIT_COMMIT_HASH
 #define GIT_COMMIT_HASH "@GIT_HASH@"
-#endif
+#endif /* ifndef GIT_COMMIT_HASH */
 
-#endif
+#endif /* ifndef _FASTDDS_MONITOR_CONFIG_H_ */
