--- a/mock/complex_mock/CMakeLists.txt
+++ b/mock/complex_mock/CMakeLists.txt
@@ -52,5 +52,5 @@ target_compile_definitions(${PROJECT_NAME} PRIVATE
 
 target_link_libraries(${PROJECT_NAME} PUBLIC fastdds_statistics_backend)
 install(TARGETS ${PROJECT_NAME}
-    RUNTIME DESTINATION Mock/${PROJECT_NAME}/${BIN_INSTALL_DIR}
-    LIBRARY DESTINATION Mock/${PROJECT_NAME}/${LIB_INSTALL_DIR})
+    RUNTIME DESTINATION ${BIN_INSTALL_DIR}
+    LIBRARY DESTINATION ${LIB_INSTALL_DIR})
