Change project name (#51)
* Changed fastdds statistics backend project name

Signed-off-by: RaulSanchez <raul@eprosima.com>

* Undo change backend name in github actions

Signed-off-by: RaulSanchez <raul@eprosima.com>

* Change Fast DDS Monitor project name

Signed-off-by: RaulSanchez <raul@eprosima.com>

* Changed include directory name

Signed-off-by: RaulSanchez <raul@eprosima.com>

* Change documentation path in github actions

Signed-off-by: RaulSanchez <raul@eprosima.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,7 +38,7 @@ set(PRODUCT_VERSION_STR ${PRODUCT_MAJOR_VERSION}.${PRODUCT_MINOR_VERSION}.${PROD
 ###############################################################################
 # Project
 ###############################################################################
-project(fastdds-monitor)
+project(fastdds_monitor)
 set(PROJECT_VERSION_MAJOR "${PRODUCT_MAJOR_VERSION}")
 set(PROJECT_VERSION_MINOR "${PRODUCT_MINOR_VERSION}")
 set(PROJECT_VERSION_PATCH "${PRODUCT_PATCH_VERSION}")
@@ -84,7 +84,7 @@ list(APPEND CMAKE_PREFIX_PATH ${QT_PATH})
 find_package(Qt5 5.15 COMPONENTS Core Widgets Gui Qml Quick Charts QuickControls2 REQUIRED)
 find_package(fastcdr REQUIRED)
 find_package(fastrtps REQUIRED)
-find_package(fastdds-statistics-backend REQUIRED)
+find_package(fastdds_statistics_backend REQUIRED)
 
 foreach(c Core Widgets Gui Quick Qml Charts QuickControls2)
     if(${Qt5${c}_FOUND})
@@ -98,7 +98,7 @@ endif()
 if(${fastrtps_FOUND})
     message(STATUS "Fast DDS found!")
 endif()
-if(${fastdds-statistics-backend_FOUND})
+if(${fastdds_statistics_backend_FOUND})
     message(STATUS "Fast DDS Statistics Backend found!")
 endif()
 
@@ -196,32 +196,32 @@ set(CMAKE_AUTORCC ON)
 # Compile program
 ###############################################################################
 set(PROJECT_HEADERS
-    ${PROJECT_SOURCE_DIR}/include/fastdds-monitor/backend/backend_types.h
-    ${PROJECT_SOURCE_DIR}/include/fastdds-monitor/backend/backend_utils.h
-    ${PROJECT_SOURCE_DIR}/include/fastdds-monitor/backend/Callback.h
-    ${PROJECT_SOURCE_DIR}/include/fastdds-monitor/backend/Listener.h
-    ${PROJECT_SOURCE_DIR}/include/fastdds-monitor/backend/SyncBackendConnection.h
-    ${PROJECT_SOURCE_DIR}/include/fastdds-monitor/Controller.h
-    ${PROJECT_SOURCE_DIR}/include/fastdds-monitor/Engine.h
-    ${PROJECT_SOURCE_DIR}/include/fastdds-monitor/model/dds/EndpointModelItem.h
-    ${PROJECT_SOURCE_DIR}/include/fastdds-monitor/model/dds/LocatorModelItem.h
-    ${PROJECT_SOURCE_DIR}/include/fastdds-monitor/model/dds/ParticipantModelItem.h
-    ${PROJECT_SOURCE_DIR}/include/fastdds-monitor/model/EntityContainerModelItem.h
-    ${PROJECT_SOURCE_DIR}/include/fastdds-monitor/model/ListItem.h
-    ${PROJECT_SOURCE_DIR}/include/fastdds-monitor/model/ListModel.h
-    ${PROJECT_SOURCE_DIR}/include/fastdds-monitor/model/logical/DomainModelItem.h
-    ${PROJECT_SOURCE_DIR}/include/fastdds-monitor/model/logical/TopicModelItem.h
-    ${PROJECT_SOURCE_DIR}/include/fastdds-monitor/model/model_types.h
-    ${PROJECT_SOURCE_DIR}/include/fastdds-monitor/model/physical/HostModelItem.h
-    ${PROJECT_SOURCE_DIR}/include/fastdds-monitor/model/physical/ProcessModelItem.h
-    ${PROJECT_SOURCE_DIR}/include/fastdds-monitor/model/physical/UserModelItem.h
-    ${PROJECT_SOURCE_DIR}/include/fastdds-monitor/model/statistics/EntityItem.h
-    ${PROJECT_SOURCE_DIR}/include/fastdds-monitor/model/SubListedListItem.h
-    ${PROJECT_SOURCE_DIR}/include/fastdds-monitor/model/SubListedListModel.h
-    ${PROJECT_SOURCE_DIR}/include/fastdds-monitor/model/tree/TreeItem.h
-    ${PROJECT_SOURCE_DIR}/include/fastdds-monitor/model/tree/TreeModel.h
-    ${PROJECT_SOURCE_DIR}/include/fastdds-monitor/statistics/StatisticsData.h
-    ${PROJECT_SOURCE_DIR}/include/fastdds-monitor/utils.h
+    ${PROJECT_SOURCE_DIR}/include/${PROJECT_NAME}/backend/backend_types.h
+    ${PROJECT_SOURCE_DIR}/include/${PROJECT_NAME}/backend/backend_utils.h
+    ${PROJECT_SOURCE_DIR}/include/${PROJECT_NAME}/backend/Callback.h
+    ${PROJECT_SOURCE_DIR}/include/${PROJECT_NAME}/backend/Listener.h
+    ${PROJECT_SOURCE_DIR}/include/${PROJECT_NAME}/backend/SyncBackendConnection.h
+    ${PROJECT_SOURCE_DIR}/include/${PROJECT_NAME}/Controller.h
+    ${PROJECT_SOURCE_DIR}/include/${PROJECT_NAME}/Engine.h
+    ${PROJECT_SOURCE_DIR}/include/${PROJECT_NAME}/model/dds/EndpointModelItem.h
+    ${PROJECT_SOURCE_DIR}/include/${PROJECT_NAME}/model/dds/LocatorModelItem.h
+    ${PROJECT_SOURCE_DIR}/include/${PROJECT_NAME}/model/dds/ParticipantModelItem.h
+    ${PROJECT_SOURCE_DIR}/include/${PROJECT_NAME}/model/EntityContainerModelItem.h
+    ${PROJECT_SOURCE_DIR}/include/${PROJECT_NAME}/model/ListItem.h
+    ${PROJECT_SOURCE_DIR}/include/${PROJECT_NAME}/model/ListModel.h
+    ${PROJECT_SOURCE_DIR}/include/${PROJECT_NAME}/model/logical/DomainModelItem.h
+    ${PROJECT_SOURCE_DIR}/include/${PROJECT_NAME}/model/logical/TopicModelItem.h
+    ${PROJECT_SOURCE_DIR}/include/${PROJECT_NAME}/model/model_types.h
+    ${PROJECT_SOURCE_DIR}/include/${PROJECT_NAME}/model/physical/HostModelItem.h
+    ${PROJECT_SOURCE_DIR}/include/${PROJECT_NAME}/model/physical/ProcessModelItem.h
+    ${PROJECT_SOURCE_DIR}/include/${PROJECT_NAME}/model/physical/UserModelItem.h
+    ${PROJECT_SOURCE_DIR}/include/${PROJECT_NAME}/model/statistics/EntityItem.h
+    ${PROJECT_SOURCE_DIR}/include/${PROJECT_NAME}/model/SubListedListItem.h
+    ${PROJECT_SOURCE_DIR}/include/${PROJECT_NAME}/model/SubListedListModel.h
+    ${PROJECT_SOURCE_DIR}/include/${PROJECT_NAME}/model/tree/TreeItem.h
+    ${PROJECT_SOURCE_DIR}/include/${PROJECT_NAME}/model/tree/TreeModel.h
+    ${PROJECT_SOURCE_DIR}/include/${PROJECT_NAME}/statistics/StatisticsData.h
+    ${PROJECT_SOURCE_DIR}/include/${PROJECT_NAME}/utils.h
 )
 
 set(PROJECT_SOURCES_NO_MAIN
@@ -293,7 +293,7 @@ else()
         ${QT5_LIBRARY_LINKS}
         fastcdr
         fastrtps
-        fastdds-statistics-backend)
+        fastdds_statistics_backend)
 
 endif()
 
