--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -53,7 +53,7 @@ jobs:
           source install/setup.bash && \
           QT_QPA_PLATFORM=offscreen \
           colcon test \
-            --packages-select fastdds-monitor \
+            --packages-select fastdds_monitor \
             --event-handlers=console_direct+ \
             --return-code-on-test-failure
 
@@ -63,7 +63,7 @@ jobs:
           mkdir coverage-report
           gcovr \
           --root src/Fast-DDS-monitor/ \
-          --object-directory build/fastdds-monitor \
+          --object-directory build/fastdds_monitor \
           --output coverage-report/coverage.xml \
           --xml-pretty \
           --exclude='.*docs/.*' \
@@ -82,7 +82,7 @@ jobs:
         uses: actions/upload-artifact@v1
         with:
           name: Documentation HTML
-          path: install/fastdds-monitor/docs/fastdds-monitor-docs/sphinx/html/
+          path: install/fastdds_monitor/docs/fastdds_monitor_docs/sphinx/html/
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v1
@@ -103,7 +103,7 @@ jobs:
         uses: actions/upload-artifact@v1
         with:
           name: spelling_errors.txt
-          path: build/fastdds-monitor/docs/test/spelling/output.txt
+          path: build/fastdds_monitor/docs/test/spelling/output.txt
         continue-on-error: true
 
   clang-tidy:
@@ -134,7 +134,7 @@ jobs:
 
       - name: Run clang-tidy
         run: |
-          cd build/fastdds-monitor
+          cd build/fastdds_monitor
           run-clang-tidy -header-filter='.*' -checks='clang-analyzer-cplusplus' -quiet 2> ${{ github.workspace }}/clang_results.yml
 
       - name: Upload clang results
