--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -213,6 +213,7 @@ set(PROJECT_HEADERS
     ${PROJECT_SOURCE_DIR}/include/${PROJECT_NAME}/model/dds/EndpointModelItem.h
     ${PROJECT_SOURCE_DIR}/include/${PROJECT_NAME}/model/dds/LocatorModelItem.h
     ${PROJECT_SOURCE_DIR}/include/${PROJECT_NAME}/model/dds/ParticipantModelItem.h
+    ${PROJECT_SOURCE_DIR}/include/${PROJECT_NAME}/model/dynamic/DynamicDataModel.h
     ${PROJECT_SOURCE_DIR}/include/${PROJECT_NAME}/model/EntityContainerModelItem.h
     ${PROJECT_SOURCE_DIR}/include/${PROJECT_NAME}/model/ListItem.h
     ${PROJECT_SOURCE_DIR}/include/${PROJECT_NAME}/model/ListModel.h
@@ -227,6 +228,8 @@ set(PROJECT_HEADERS
     ${PROJECT_SOURCE_DIR}/include/${PROJECT_NAME}/model/SubListedListModel.h
     ${PROJECT_SOURCE_DIR}/include/${PROJECT_NAME}/model/tree/TreeItem.h
     ${PROJECT_SOURCE_DIR}/include/${PROJECT_NAME}/model/tree/TreeModel.h
+    ${PROJECT_SOURCE_DIR}/include/${PROJECT_NAME}/statistics/DynamicChartBox.h
+    ${PROJECT_SOURCE_DIR}/include/${PROJECT_NAME}/statistics/DynamicData.h
     ${PROJECT_SOURCE_DIR}/include/${PROJECT_NAME}/statistics/StatisticsData.h
     ${PROJECT_SOURCE_DIR}/include/${PROJECT_NAME}/utils.h
 )
@@ -239,6 +242,7 @@ set(PROJECT_SOURCES_NO_MAIN
     ${PROJECT_SOURCE_DIR}/src/Engine.cpp
     ${PROJECT_SOURCE_DIR}/src/model/dds/EndpointModelItem.cpp
     ${PROJECT_SOURCE_DIR}/src/model/dds/ParticipantModelItem.cpp
+    ${PROJECT_SOURCE_DIR}/src/model/dynamic/DynamicDataModel.cpp
     ${PROJECT_SOURCE_DIR}/src/model/ListItem.cpp
     ${PROJECT_SOURCE_DIR}/src/model/ListModel.cpp
     ${PROJECT_SOURCE_DIR}/src/model/logical/TopicModelItem.cpp
@@ -247,6 +251,8 @@ set(PROJECT_SOURCES_NO_MAIN
     ${PROJECT_SOURCE_DIR}/src/model/SubListedListModel.cpp
     ${PROJECT_SOURCE_DIR}/src/model/tree/TreeItem.cpp
     ${PROJECT_SOURCE_DIR}/src/model/tree/TreeModel.cpp
+    ${PROJECT_SOURCE_DIR}/src/statistics/DynamicChartBox.cpp
+    ${PROJECT_SOURCE_DIR}/src/statistics/DynamicData.cpp
     ${PROJECT_SOURCE_DIR}/src/statistics/StatisticsData.cpp
     ${PROJECT_SOURCE_DIR}/src/utils.cpp
 )
