--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,6 +11,104 @@ on:
 
 jobs:
 
+  windows-build-test:
+    runs-on: windows-latest
+    environment:
+      name: codecov
+    env:
+      CXXFLAGS: /MP
+      OPENSSL64_ROOT: "C:/Program Files/OpenSSL-Win64"
+
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          path: Fast-DDS-monitor
+
+      - name: install OpenSSL
+        shell: pwsh
+        run: >
+          cmake --find-package -DNAME=OpenSSL -DCOMPILER_ID=GNU -DLANGUAGE=CXX -DMODE=EXIST | Tee-Object -Variable res;
+          if ( $res -notlike '*OpenSSL found.*')
+          {
+            choco install openssl -yr --no-progress;
+            @(ls -Path C:\Windows\System32\* -Include libssl-*.dll; ls -Path C:\Windows\SysWOW64\* -Include libssl-*.dll)
+            | rm -ErrorAction SilentlyContinue
+          }
+
+      - name: install GoogleTest
+        shell: pwsh
+        run: >
+          cmake --find-package -DNAME=GTest -DCOMPILER_ID=GNU -DLANGUAGE=CXX -DMODE=EXIST | Tee-Object -Variable res;
+          if ( $res -notlike '*GTest found.*')
+          {
+            git clone https://github.com/google/googletest.git;
+            cmake -DCMAKE_INSTALL_PREFIX='C:\Program Files\gtest' -Dgtest_force_shared_crt=ON -DBUILD_GMOCK=ON `
+              -B build\gtest -A x64 -T host=x64 googletest;
+            cmake --build build\gtest --config Debug --target install;
+            cmake --build build\gtest --config Release --target install
+          }
+
+      - name: Install Qt
+        uses: jurplel/install-qt-action@v2.13.0
+        with:
+          version: '5.15.2'
+          arch: 'win64_msvc2019_64'
+          dir: '${{ github.workspace }}/qt_installation/'
+          modules: 'qtcharts'
+
+      - name: install foonatham memory
+        shell: pwsh
+        run: >
+          git clone --recurse-submodules --branch v0.6-2 https://github.com/foonathan/memory.git;
+          cmake -DBUILD_SHARED_LIBS=OFF -DFOONATHAN_MEMORY_BUILD_TOOLS=ON -DCMAKE_POSITION_INDEPENDENT_CODE=ON `
+            -DFOONATHAN_MEMORY_BUILD_TESTS=OFF -Ax64 -T host=x64 -B build\memory memory;
+          cmake --build build\memory --config Debug --target install;
+          cmake --build build\memory --config Release --target install
+
+      - name: install Fast-CDR
+        shell: pwsh
+        run: >
+          git clone https://github.com/eProsima/Fast-CDR.git;
+          cmake -Ax64 -T host=x64 -B build\fastcdr Fast-CDR;
+          cmake --build build\fastcdr --config Debug --target install;
+          cmake --build build\fastcdr --config Release --target install
+
+      - name: install Fast-DDS
+        shell: pwsh
+        run: >
+          git clone https://github.com/eProsima/Fast-DDS.git;
+          cmake -DTHIRDPARTY=ON -DSECURITY=ON -DCOMPILE_EXAMPLES=OFF -DEPROSIMA_BUILD_TESTS=OFF `
+            -DINTERNAL_DEBUG=ON -Ax64 -T host=x64 -B build\fastdds Fast-DDS;
+          cmake --build build\fastdds --config Debug --target install;
+          cmake --build build\fastdds --config Release --target install
+
+      - name: install Fast-DDS-statistics-backend
+        shell: pwsh
+        run: >
+          git clone https://github.com/eProsima/Fast-DDS-statistics-backend.git;
+          cmake -DCMAKE_PREFIX_PATH='C:\Program Files\gtest' -DBUILD_LIBRARY_TESTS=ON `
+            -B build\backend -A x64 -T host=x64 Fast-DDS-statistics-backend;
+          cmake --build build\backend --config Debug --target install;
+          cmake --build build\backend --config Release --target install
+
+      - name: install Fast-DDS-monitor
+        shell: pwsh
+        run: >
+          git clone https://github.com/eProsima/Fast-DDS-monitor.git;
+          cmake -DCMAKE_PREFIX_PATH='C:\Program Files\gtest' -DBUILD_TESTS=ON -DBUILD_MOCK=ON `
+            -DQT_PATH=$GITHUB_WORKSPACE/qt_installation/Qt/5.15.2 `
+            -B build\monitor -A x64 -T host=x64 Fast-DDS-monitor;
+          cmake --build build\monitor --config Debug --target install;
+          cmake --build build\monitor --config Release --target install
+
+      - name: Run tests on Release
+        shell: pwsh
+        run: ctest -C Release --test-dir build\monitor -V --timeout 60
+
+      - name: Run tests on Debug
+        shell: pwsh
+        run: ctest -C Debug --test-dir build\monitor -V --timeout 60
+
   ubuntu-build-test:
     runs-on: ubuntu-latest
     environment:
