--- a/.github/actions/fetch-fastdds-statistics-backend-repos/action.yml
+++ b/.github/actions/fetch-fastdds-statistics-backend-repos/action.yml
@@ -1,9 +1,9 @@
-name: 'fetch-fastdds-repos'
+name: 'fetch-fastdds-statistics-backend-repos'
 description: 'Fetch Fast DDS and its dependencies'
 runs:
   using: "composite"
   steps:
-    - id: fetch-fastdds-repos
+    - id: fetch-fastdds-statistics-backend-repos
       run: |
         wget https://raw.githubusercontent.com/eProsima/Fast-DDS-statistics-backend/master/fastdds_statistics_backend.repos
         vcs import src <  fastdds_statistics_backend.repos
